# gameops-agent-test-platform

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/agent/: fake_llm.py  graph.py  human_review.py  llm_provider.py  prompts.py  tools.py
app/api/: activity.py  agent.py  operation_log.py  probability.py  reward.py
app/core/: config.py  exceptions.py  logger.py
app/db/: models.py  session.py
app/schemas/: activity.py  agent.py  probability.py  reward.py
app/services/: activity_service.py  agent_service.py  idempotency_service.py  operation_log_service.py  probability_service.py  review_service.py  reward_service.py
docs/: api_overview.md  interview_notes.md  performance_testing.md  project_overview.md  resume_bullets.md  testing_strategy.md
jmeter/: README.md  activity_create_load_test.jmx  agent_generate_load_test.jmx  probability_validate_load_test.jmx  reward_claim_load_test.jmx
jmeter/data/: activity_create_payloads.csv  agent_generate_payloads.csv  probability_validate_payloads.csv  reward_claim_payloads.csv
scripts/: run_allure.ps1  run_allure.sh  run_coverage.ps1  run_coverage.sh  run_jmeter_activity.ps1  run_jmeter_activity.sh  run_jmeter_agent.ps1  run_jmeter_agent.sh  run_jmeter_all.ps1  run_jmeter_all.sh  run_jmeter_probability.ps1  run_jmeter_probability.sh  run_jmeter_reward.ps1  run_jmeter_reward.sh
tests/: conftest.py  test_activity_api.py  test_agent_guardrail.py  test_agent_review.py  test_agent_workflow.py  test_health_api.py  test_llm_provider.py  test_operation_log_api.py  test_operation_log_service.py  test_probability_api.py  test_probability_service.py  test_review_persistence.py  test_reward_api.py  test_reward_idempotency.py
