[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gameops-agent-test-platform"
version = "0.1.0"
description = "A FastAPI-based GameOps activity configuration and QA platform for SDET internship portfolio."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "sqlalchemy>=2.0.0",
    "greenlet>=3.1.1,<3.2.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "allure-pytest>=2.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
pythonpath = ["."]
markers = [
    "unit: unit/service level tests",
    "api: API endpoint tests",
    "integration: integration workflow tests",
    "regression: regression suite tests",
    "agent: Agent workflow and guardrail tests",
    "performance: performance-related tests, not JMeter",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    ".venv/*",
    "venv/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 60
